fixed color cutting off after 100% vh, added title in posts

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,7 @@
 .App {
   text-align: center;
   font-family: 'Roboto', sans-serif;
-  height: 100vh;
+  min-height: 100vh;
   background-color: #f4f3f2;
 }
 
